--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,7 +13,8 @@
       <li><h2><a href="svgWithLogo.php">SVG avec Logo</a></h2></li>
       <li><h2><a href="pngWithLogo.php">PNG avec Logo</a></h2></li>
       <li><h2><a href="webpWithLogo.php">WEBP avec Logo</a></h2></li>
-      <li><h2><a href="#">...</a></h2></li>
+      <li><h2><a href="qr-integration.php">qrcode implémentation simplifiée</a></h2></li>
+      <li><h2><a href="#"></a></h2></li>
     </ul>
   </body>
 </html>
