Création d'une page testant la fonction ob_start()

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -14,6 +14,7 @@
       <li><h2><a href="pngWithLogo.php">PNG avec Logo</a></h2></li>
       <li><h2><a href="webpWithLogo.php">WEBP avec Logo</a></h2></li>
       <li><h2><a href="qr-integration.php">qrcode implémentation simplifiée</a></h2></li>
+      <li><h2><a href="ob_start_test.php">ob_start() - tests</a></h2></li>
       <li><h2><a href="#"></a></h2></li>
     </ul>
   </body>
